Adding some Python items from todo list.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "9f0bdd6c",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,10 @@
       "True\n",
       "False\n",
       "False\n",
-      "False\n"
+      "False\n",
+      "3\n",
+      "3\n",
+      "3.0\n"
      ]
     }
    ],
@@ -313,7 +316,12 @@
     "# All comparisons with NaN automatically fail.\n",
     "print(float('nan') == float('nan'))\n",
     "print(float('nan') is float('nan'))\n",
-    "print(float('nan') == 0)"
+    "print(float('nan') == 0)\n",
+    "\n",
+    "# Conversions\n",
+    "print(int(3.2)) # 3\n",
+    "print(int(3.7)) # 3\n",
+    "print(float(3)) # 3.0"
    ]
   },
   {
@@ -611,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "id": "f4abe805",
    "metadata": {},
    "outputs": [
@@ -622,7 +630,9 @@
       "6\n",
       "5\n",
       "11\n",
-      "111\n"
+      "111\n",
+      "[2, 3, 4]\n",
+      "(2, 3, 4)\n"
      ]
     }
    ],
@@ -647,7 +657,15 @@
     "# copy a list\n",
     "l2 = [*l]\n",
     "# copy a dict\n",
-    "d2 = {**d}"
+    "d2 = {**d}\n",
+    "\n",
+    "# spread on left side\n",
+    "a, *b = [1, 2, 3, 4]  # interestingly, makes a list instead of tuple\n",
+    "print(b)\n",
+    "\n",
+    "# lambda\n",
+    "f = lambda a, *b: print(b)\n",
+    "f(1, 2, 3, 4)"
    ]
   },
   {
@@ -1382,6 +1400,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "103c3816",
+   "metadata": {},
+   "source": [
+    "# / and * in function args\n",
+    "\n",
+    "This is a newer feature that you need to know in order to understand the latest Python docs.\n",
+    "\n",
+    "`/` and `*` are fake args that signal the following:\n",
+    "- everything to the left of `/` must be positional only\n",
+    "- everything to the right of `*` must be keyword only\n",
+    "- everything in between can be either\n",
+    "- they must always come in the order of `/` and `*`, and when missing, it means the other side is either"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d0091a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(a, b, /, c, d, *, e, f):\n",
+    "    pass\n",
+    "\n",
+    "def g(a, b, c, d, *, e, f):\n",
+    "    pass\n",
+    "\n",
+    "def h(a, b, /, c, d, e, f):\n",
+    "    pass\n",
+    "\n",
+    "def i(a, b, c, d, e, f):\n",
+    "    pass\n",
+    "\n",
+    "f(1, 2, 3, d=4, e=5, f=6)\n",
+    "g(1, 2, 3, d=5, e=5, f=6)\n",
+    "h(1, 2, 3, d=5, e=5, f=6)\n",
+    "i(1, 2, c=3, d=4, e=5, f=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "72747fd6",
    "metadata": {},
    "source": [
@@ -1477,6 +1536,41 @@
     "\n",
     "# If you didn't do this, a would be the tuple instead.\n",
     "a, _ = f(1, 2, 3, 4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "647a8751",
+   "metadata": {},
+   "source": [
+    "# Type of * and ** Params\n",
+    "\n",
+    "`*` and `**` are `tuple` and `dict` objects.\n",
+    "\n",
+    "Note that this means they are __eager__, not lazy sequences."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b769b147",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(arg1, *pos, **kwargs):\n",
+    "    print(type(pos))\n",
+    "    print(type(kwargs))\n",
+    "    \n",
+    "f(10, 20, 30, x=40, y=50)"
    ]
   },
   {
