--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6e76fcad",
    "metadata": {},
    "outputs": [],
@@ -109,6 +109,9 @@
     "        pass\n",
     "    \n",
     "    def __new__(cls): # higher-level creation than __init__\n",
+    "        pass\n",
+    "    \n",
+    "    def __matmul__(self, other): # matrix multiplication\n",
     "        pass"
    ]
   },
@@ -1434,9 +1437,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce2fa14c",
+   "metadata": {},
+   "source": [
+    "# Matrix Multiplication Operator\n",
+    "\n",
+    "Although __not implemented by built-in collections__, the matrix multiplication operator is available to overload (as is done by __TensorFlow__, __numpy__, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "63968ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.MyClass object at 0x10a420700> <__main__.MyClass object at 0x10a271990>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __matmul__(self, other):\n",
+    "        print(self, other)\n",
+    "\n",
+    "m = MyClass()\n",
+    "n = MyClass()\n",
+    "\n",
+    "print(m @ n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a09bb01f",
+   "metadata": {},
+   "source": [
+    "# NotImplemented and NotImplementedError\n",
+    "\n",
+    "`NotImplemented` is a singleton instance to return from things like operators.\n",
+    "\n",
+    "`NotImplementedError` is a class (must construct with `NotImplementedError()` to use for stubbing functions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee2995f",
+   "id": "76edd442",
    "metadata": {},
    "outputs": [],
    "source": []
