Finishing remaining current Python ToDo items.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -2975,9 +2975,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4402a60",
+   "metadata": {},
+   "source": [
+    "# Casting/Coercion\n",
+    "\n",
+    "Because parameters in Python are not strongly typed (even if you use type annotations), there is no automatic coercion like in C++.\n",
+    "\n",
+    "You can explicitly convert using types as if they are constructors/classes.\n",
+    "\n",
+    "The built-in data types actually call methods like `__int__` on a class to accomplish the conversion (which you can overload)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "abdf5754",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    print(type(x))\n",
+    "    \n",
+    "f(5)\n",
+    "f(3.5)\n",
+    "\n",
+    "f(float(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd261160",
+   "metadata": {},
+   "source": [
+    "# f-strings\n",
+    "\n",
+    "An f-string interpolates __expressions__ into strings inside the `{}`, using the surrounding scope for variables if needed.\n",
+    "\n",
+    "In addition, as shown in the bottom line below, there is a special feature where putting `=` at the end of the `{}` will cause python to add the whole expression (literally, including the `=`) before the value.\n",
+    "\n",
+    "You can put spaces after the `=` to get those in the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a3b1e4e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 110 30 50\n",
+      "x=10_x+y= 110_x + 20 =30_20 + 30=50\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 100\n",
+    "\n",
+    "s = f'{x} {x+y} {x+20} {20 + 30}'\n",
+    "print(s)\n",
+    "\n",
+    "print(f'{x=}_{x+y= }_{x + 20 =}_{20 + 30=}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd054d99",
+   "metadata": {},
+   "source": [
+    "# Truthiness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0737e9a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true: True\n",
+      "integer: True\n",
+      "string: True\n",
+      "negative: True\n",
+      "collection: True\n",
+      "nan: True\n",
+      "inf: True\n",
+      "\n",
+      "false: False\n",
+      "zero: False\n",
+      "empty string: False\n",
+      "empty collection: False\n",
+      "None: False\n",
+      "\n",
+      "False is not None: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('true:', bool(True))\n",
+    "print('integer:', bool(5))\n",
+    "print('string:', bool('hi'))\n",
+    "print('negative:', bool(-5))\n",
+    "print('collection:', bool([1, 2, 3]))\n",
+    "print('nan:', bool(float('NaN')))\n",
+    "print('inf:', bool(float('Infinity')))\n",
+    "print()\n",
+    "\n",
+    "print('false:', bool(False))\n",
+    "print('zero:', bool(0))\n",
+    "print('empty string:', bool(''))\n",
+    "print('empty collection:', bool([]))\n",
+    "print('None:', bool(None))\n",
+    "print()\n",
+    "\n",
+    "print('False is not None:', False is not None)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc9983bd",
+   "id": "e1af6f23",
    "metadata": {},
    "outputs": [],
    "source": []
