--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -1485,9 +1485,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c35ea288",
+   "metadata": {},
+   "source": [
+    "# Metaclasses\n",
+    "\n",
+    "This example was copied straight from https://medium.com/@miguel.amezola/demystifying-python-metaclasses-understanding-and-harnessing-the-power-of-custom-class-creation-d7dff7b68de8 as a convenient example, but I had to ask ChatGPT to fix it because it didn't work.  The issue was that closures don't work properly when you attach methods in metaclasses.\n",
+    "\n",
+    "Overall, the idea is this:\n",
+    "- metaclasses inherit from `type` (the main metaclass)\n",
+    "- you select a metaclass when you define a class by using the `metaclass` parameter in the constructor list\n",
+    "- a metaclass is able to mess with the creation of the class via the `__new__` operator overload\n",
+    "- in the example below, this was used to create a DSL because the class defined methods that caused the object to be able to react to strings\n",
+    "\n",
+    "As mentioned in that article, you can also do magic with decorators on class members, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ca7b600f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "Goodbye!\n",
+      "No handler for event: unknown\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DomainSpecificLanguage(type):\n",
+    "    def __new__(cls, name, bases, attrs):\n",
+    "        # Find all methods starting with \"when_\" and store them in a dictionary\n",
+    "        events = {k[5:]: v for k, v in attrs.items() if k.startswith(\"when_\")}  # Remove the 'when_' prefix\n",
+    "        \n",
+    "        # Create a new class that will be returned by this metaclass\n",
+    "        new_cls = super().__new__(cls, name, bases, attrs)\n",
+    "        \n",
+    "        # Attach the events dictionary to the class\n",
+    "        new_cls._events = events\n",
+    "        \n",
+    "        # Define a new method that will be added to the class\n",
+    "        def listen(self, event):\n",
+    "            if event in self._events:\n",
+    "                self._events[event](self)\n",
+    "            else:\n",
+    "                print(f\"No handler for event: {event}\")\n",
+    "        \n",
+    "        # Add the new method to the class\n",
+    "        new_cls.listen = listen\n",
+    "        \n",
+    "        return new_cls\n",
+    "\n",
+    "# Define a class using the DSL syntax\n",
+    "class MyDSLClass(metaclass=DomainSpecificLanguage):\n",
+    "    def when_hello(self):\n",
+    "        print(\"Hello!\")\n",
+    "\n",
+    "    def when_goodbye(self):\n",
+    "        print(\"Goodbye!\")\n",
+    "\n",
+    "# Use the DSL syntax to listen for events\n",
+    "obj = MyDSLClass()\n",
+    "obj.listen(\"hello\")     # Output: \"Hello!\"\n",
+    "obj.listen(\"goodbye\")   # Output: \"Goodbye!\"\n",
+    "obj.listen(\"unknown\")   # Output: \"No handler for event: unknown\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b29b726",
+   "metadata": {},
+   "source": [
+    "# Low-Level Memory Management\n",
+    "\n",
+    "It's worth knowing in case it ever comes up that objects have a `__dict__` attribute for member references normally, but that you can provide a `__slots__` member instead to change to a more memory efficient and time performant memory model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76edd442",
+   "id": "19157d8a",
    "metadata": {},
    "outputs": [],
    "source": []
