--- a/python/Modules and Packages.ipynb
+++ b/python/Modules and Packages.ipynb
@@ -678,9 +678,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c892fe04",
+   "metadata": {},
+   "source": [
+    "# \\_\\_main\\_\\_.py\n",
+    "\n",
+    "`__main.py__`, if present, is the file that will run first when a folder is run from the commandline.\n",
+    "\n",
+    "It works with or without the `-m` flag for using a module name instead of path.\n",
+    "\n",
+    "If you use this mechanism, you don't need to use the `__name__ == '__main__'` idiom in that file and probably don't need it anymore in `__init__.py` (for importing as a module) either."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "293152c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hi, this is my app']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!!python3 myapp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cb6474e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hi, this is my app']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!!python3 -m myapp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e5e748",
+   "id": "27aac8e5",
    "metadata": {},
    "outputs": [],
    "source": []
