--- a/python/More Functional Stuff.ipynb
+++ b/python/More Functional Stuff.ipynb
@@ -492,9 +492,221 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bfaf04ce",
+   "metadata": {},
+   "source": [
+    "# Closures\n",
+    "\n",
+    "Python closes __by reference__ no matter what kind of variable it is (no exception for loop variables, etc.). This can lead to confusing behavior if you aren't aware of it.\n",
+    "\n",
+    "In the examples below:\n",
+    "- `get_counter` doesn't work because all the lambdas see the final value of the variable\n",
+    "- `get_counter_2` doesn't work for the same reason\n",
+    "- `get_counter_3` works because the variable is captured by value while the code is still executing\n",
+    "\n",
+    "The key to getting around this, when needed, is to pass the variable as a function parameter (eg. with a local function as shown below).  This creates a __lexical capture point__ that breaks the reference.\n",
+    "\n",
+    "Key takeaway: when it's implicit it's a reference, when it's a function param it's a value\n",
+    "\n",
+    "The final example below shows that this works for class methods too (except apparently in the context of metaclasses)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "26755b34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_counter():\n",
+    "    counters = []\n",
+    "    for i in range(10):\n",
+    "        counters.append(lambda: print(i))\n",
+    "    return counters\n",
+    "for c in get_counter():\n",
+    "    c()\n",
+    "print()\n",
+    "\n",
+    "def get_counter_2():\n",
+    "    counters = []\n",
+    "    for i in range(10):\n",
+    "        def counter(n):\n",
+    "            print(n)\n",
+    "        counters.append(lambda: counter(i))\n",
+    "    return counters\n",
+    "for c in get_counter_2():\n",
+    "    c()\n",
+    "print()\n",
+    "\n",
+    "def get_counter_3():\n",
+    "    counters = []\n",
+    "    for i in range(10):\n",
+    "        def counter(n):\n",
+    "            return lambda: print(n)\n",
+    "        counters.append(counter(i))\n",
+    "    return counters\n",
+    "for c in get_counter_3():\n",
+    "    c()\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a1b9cdf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "103\n"
+     ]
+    }
+   ],
+   "source": [
+    "from types import MethodType\n",
+    "\n",
+    "class MyClass:\n",
+    "    def __init__(self):\n",
+    "        self.x = 100\n",
+    "        \n",
+    "    def make_incrementor(self, other):\n",
+    "        s = self\n",
+    "        def increment(self):\n",
+    "            s.x += 1  # increment MyClass (not other) by reference\n",
+    "        other.increment = MethodType(increment, other) # add as method\n",
+    "        \n",
+    "class OtherClass:\n",
+    "    pass\n",
+    "\n",
+    "m = MyClass()\n",
+    "o = OtherClass()\n",
+    "m.make_incrementor(o)\n",
+    "\n",
+    "o.increment()\n",
+    "o.increment()\n",
+    "o.increment()\n",
+    "print(m.x) # 103"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82d4b819",
+   "metadata": {},
+   "source": [
+    "# Method Binding\n",
+    "\n",
+    "Using a method as a standalone function is much more straighfoward than going the other way around.\n",
+    "- when read through an instance, the method becomes a standalone function __without self__ (bound)\n",
+    "- when read through a class, the method __includes self__ as the first param (unbound)\n",
+    "- static methods are effectively just always treated as unbound\n",
+    "  - you can even call the method on the class instance of instance with a 'self' param passed in\n",
+    "  \n",
+    "On the other hand, attaching a function to a class as a method dynamically takes more thought:\n",
+    "- a static method can just be attached to the class itself\n",
+    "- an instance method can be attached like that (if it has self param)\n",
+    "- to attach to a specific instance instead of all instances, you have to use `MethodType` as shown below\n",
+    "  - counterintuitive because the `types` library is usually for type hints\n",
+    "  - you must pass the function, including `self` arg, and also the object itself as the 2nd param\n",
+    "  - it looks like JavaScript's `bind` except the opposite use case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e9115468",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.StubClass object at 0x107bd1930> 100\n",
+      "<__main__.StubClass object at 0x107bd1930> 100\n",
+      "<__main__.StubClass object at 0x107bd1930> 100\n",
+      "<__main__.StubClass object at 0x107bd1930> 100\n",
+      "<__main__.StubClass object at 0x107bd1930> 100\n",
+      "<__main__.StubClass object at 0x107bd1930> 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial, partialmethod\n",
+    "from types import MethodType\n",
+    "\n",
+    "class StubClass:\n",
+    "    def f(self, x):\n",
+    "        print(self, x)\n",
+    "\n",
+    "s = StubClass()\n",
+    "\n",
+    "## using method as function\n",
+    "s.f(100) ## [the object] 100\n",
+    "f = s.f\n",
+    "f(100) ## [the object] 100\n",
+    "f = StubClass.f\n",
+    "f(s, 100) ## [the object] 100\n",
+    "\n",
+    "## using function as method\n",
+    "s.g = lambda self, x: print(self, x)\n",
+    "#s.g(100)  # this doesn't work as you'd expect!\n",
+    "s.g = MethodType(lambda self, x: print(self, x), s) # this is how you have to do it\n",
+    "s.g(100)\n",
+    "StubClass.h = lambda self, x: print(self, x) # this works as well!\n",
+    "s.h(100)\n",
+    "s.i = MethodType(lambda x: print(x), s) # This doesn't work - MethodType requires the self arg\n",
+    "#s.i(100)\n",
+    "\n",
+    "## calling instance method as static\n",
+    "StubClass.f(s, 100)  # works!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3abe3bab",
+   "id": "6a6d9c16",
    "metadata": {},
    "outputs": [],
    "source": []
