Adding venv info.

--- a/python/Conda and Pip.ipynb
+++ b/python/Conda and Pip.ipynb
@@ -1677,9 +1677,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba99ab12",
+   "metadata": {},
+   "source": [
+    "# pip3\n",
+    "\n",
+    "New versions of python require you to say `pip3` instead of `pip` just like you have to run with `python3` instead of `python`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68301d4e",
+   "metadata": {},
+   "source": [
+    "# venv\n",
+    "\n",
+    "`venv` is a newer built-in module to virtualize environments without the need for 3rd party options like `Conda`.\n",
+    "\n",
+    "But the catch is it's __only for pip packages__, not for Python itself.\n",
+    "\n",
+    "Here are some commands:\n",
+    "\n",
+    "- `python3 -m venv somefolder`\n",
+    "   - makes a new folder called `somefolder` populated with virtualization scaffolding\n",
+    "   - that new folder is effectively a __virtual environment__ for pip packages\n",
+    "   - parent folders will be created as needed\n",
+    "- `source somefolder/bin/activate`\n",
+    "   - a virtual environment contains a `bin/activate` script that you can source\n",
+    "   - this will make that the active environment in the current shell session\n",
+    "     - even hacks itself into your prompt temporarily\n",
+    "- `deactivate`\n",
+    "   - goes back to global environment when an environment is active\n",
+    "- `pip3 install somepackage`\n",
+    "   - install a pip package as normal will go into the environment instead of global if active\n",
+    "  \n",
+    "You should put environment stuff in your `.gitignore` (the Python GitHub template already does that)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b70f922b",
+   "id": "6e8bb488",
    "metadata": {},
    "outputs": [],
    "source": []
