Adding remaining JS and TS research items from ToDo list.

--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -1098,9 +1098,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "101d4304",
+   "metadata": {},
+   "source": [
+    "# use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b243588",
+   "metadata": {},
+   "source": [
+    "`use` __directives__ tell the TS or JS (or TSX/JSX) parser to activate some feature of the underlying engine.  It is up to the parser to support them.\n",
+    "\n",
+    "Note that the whole statement is a __string__ with a semicolon.  It can be __file-scoped__ or __function-scoped__.\n",
+    "\n",
+    "- `'use madeup'`;\n",
+    "  - this will compile but it will not do anything because the parser and engine don't know it\n",
+    "- `'use strict'`;\n",
+    "  - this is understood by the JS engines (as of ES6) to make things strictier in certain ways\n",
+    "    - could get errors when wouldn't before\n",
+    "- `'use client'`;\n",
+    "  - this is added by the JSX/TSX parser in React to tell the renderer to make client-mode code\n",
+    "  \n",
+    "This is a __parse-time__ feature, not a runtime feature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b603b8",
+   "id": "c39b9872",
    "metadata": {},
    "outputs": [],
    "source": []
