--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "React is a __declarative language__ for syncing the DOM with application data (and building UI).  It is __component based__ (similar to Angular in that regard).\n",
     "\n",
-    "React is a __JavaScript__ library, but __TypeScript bindings__ are available as well."
+    "React is a __JavaScript__ library, but __TypeScript bindings__ are available as well.\n",
+    "\n",
+    "__NOTE__: most of this content has been absorbed into a Google Docs file and then greatly expanded on as I learned more React.  Thus, this document is no longer my personal goto for reviewing React."
    ]
   },
   {
