--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1199,6 +1199,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42900443",
+   "metadata": {},
+   "source": [
+    "## URLs\n",
+    "\n",
+    "- __absolute path__: `/folder1/myscript.js`\n",
+    "  - relative to __web app root__ (regardless of where index file or current file is)(configured by server)\n",
+    "- __relative path__: `folder1/myscript.js`\n",
+    "  - relative to current file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17cd66ae",
    "metadata": {},
    "source": [
@@ -1332,9 +1345,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1e8a691",
+   "metadata": {},
+   "source": [
+    "# AbortController\n",
+    "\n",
+    "An `AbortController` lets you abort fetches while they're happening.\n",
+    "\n",
+    "You have to pass the `signal` member into the 2nd param object of `fetch` to set it all up (see below)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4c376efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "AbortError: This operation was aborted\n",
+      "    at Object.fetch (node:internal/deps/undici/undici:11522:11)\n",
+      "    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // set up the abort scaffolding\n",
+    "  const controller = new AbortController();\n",
+    "  const signal = controller.signal;\n",
+    "  \n",
+    "  // kick off an async fetch\n",
+    "  const promise = fetch('http://www.amazon.com', {signal});\n",
+    "  \n",
+    "  // stop the fetch in-progress\n",
+    "  controller.abort();\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d36075",
+   "id": "e2ee4ebb",
    "metadata": {},
    "outputs": [],
    "source": []
