--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2430,9 +2430,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5beb199",
+   "metadata": {},
+   "source": [
+    "# 'satisifes' Operator\n",
+    "\n",
+    "`satisfies` is just a __compiler-time__ typecheck in the TypeScript compiler that's kind of like doing `implements` except on an instance whose structure is known at compile-time.\n",
+    "\n",
+    "Just like `as` and `implements`, it goes away in the emitted JS code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3baea31e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  class Animal {\n",
+    "      talk() {}\n",
+    "      walk() {}\n",
+    "  }\n",
+    "  \n",
+    "  const dog = {talk() {}, walk(){}} satisfies Animal;\n",
+    "  dog satisfies Animal;\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a74e627e",
+   "id": "ebef9fc3",
    "metadata": {},
    "outputs": [],
    "source": []
