--- a/typescript/tsconfig.json.ipynb
+++ b/typescript/tsconfig.json.ipynb
@@ -124,9 +124,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08aa2a9a",
+   "metadata": {},
+   "source": [
+    "## paths\n",
+    "\n",
+    "The `paths` property can be used to configure __prefixes__ to use in import paths.  For instance, if you want `@/` to always mean in a certain subpackage or subfolder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12a2364c",
+   "id": "b2eb787f",
    "metadata": {},
    "outputs": [],
    "source": []
