--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -5760,7 +5760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e2671604",
    "metadata": {},
    "outputs": [
@@ -5777,7 +5777,7 @@
        "undefined"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5797,6 +5797,86 @@
     "    console.log(m);\n",
     "})();"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad09f3e4",
+   "metadata": {},
+   "source": [
+    "# RAII (dispose pattern)\n",
+    "\n",
+    "This is a fairly __new feature__, so Jupyter doesn't support it yet.\n",
+    "\n",
+    "Chrome devtools doesn't seem to support `using` yet either - it's originally a TypeScript feature that is supposed to be coming to JavaScript."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2fc761db",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 9, Character 9\n        using m = new MyClass();\n________^\nTS1434: Unexpected keyword or identifier.\n\nLine 3, Character 10\n        [Symbol.dispose]() { // use asyncDispose instead of need to make this async\n_________^\nTS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.\n\nLine 9, Character 9\n        using m = new MyClass();\n________^\nTS2304: Cannot find name 'using'.\n\nLine 9, Character 15\n        using m = new MyClass();\n______________^\nTS2304: Cannot find name 'm'.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 9, Character 9",
+      "        using m = new MyClass();",
+      "________^",
+      "TS1434: Unexpected keyword or identifier.",
+      "",
+      "Line 3, Character 10",
+      "        [Symbol.dispose]() { // use asyncDispose instead of need to make this async",
+      "_________^",
+      "TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.",
+      "",
+      "Line 9, Character 9",
+      "        using m = new MyClass();",
+      "________^",
+      "TS2304: Cannot find name 'using'.",
+      "",
+      "Line 9, Character 15",
+      "        using m = new MyClass();",
+      "______________^",
+      "TS2304: Cannot find name 'm'.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        [Symbol.dispose]() { // use asyncDispose instead of need to make this async\n",
+    "            console.log('disposed');\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    function f() {\n",
+    "        using m = new MyClass();\n",
+    "        \n",
+    "        console.log('class created');\n",
+    "        // disposed will get called printed as we exit this function block\n",
+    "    }\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ec002a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
