Adding notes about treating objects as python maps in JS.

--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -1744,9 +1744,178 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22484cbf",
+   "metadata": {},
+   "source": [
+    "# Object as Map\n",
+    "\n",
+    "NOTE: for this one, I went with pure JS instead of TS so I don't have to mess with type annotations for indexers.\n",
+    "\n",
+    "Summary:\n",
+    "- maps have their own key-value stores accessed via their methods - they do not override object behavior\n",
+    "- objects already behave like maps but using `[]` and `.` to access members (which maps do not override)\n",
+    "- to get keys, values, and entries, it's almost the same between maps and objects, except:\n",
+    "  - maps use direct methods (`m.keys()`)\n",
+    "    - this will not even compile on a non-map object\n",
+    "  - objects use static methods (`Object.keys(o)`)\n",
+    "    - this will do the wrong thing on a map\n",
+    "- entries are just arrays of 2 values \\[key, value\\]\n",
+    "  - map is directly iterable as entries while object is not\n",
+    "  - iterating over a map with `[key, value]` is just using __destructuring__\n",
+    "- `in` membership testing only works for `Object`\n",
+    "  - as opposed to `has` on `Map`\n",
+    "- TypeScript needs index signatures to let you use an object as a map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ebc2d441",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/object-as-map.js\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/object-as-map.js\n",
+    "\n",
+    "const m = new Map();\n",
+    "\n",
+    "// [] is an Object operator, not a Map one\n",
+    "console.log('***[] vs. .set()/.get()***')\n",
+    "m['x'] = 100;\n",
+    "console.log(m);         // x is a key on the object instance\n",
+    "console.log(m.keys());  // still no map keys\n",
+    "m.set('y', 100);\n",
+    "console.log(m);\n",
+    "console.log(m['y']);    // [] and .set()/.get() are totally separate ideas\n",
+    "console.log()\n",
+    "\n",
+    "// pretending object is map and using [] like python\n",
+    "console.log('***[] on object to treat like map***')\n",
+    "const o = {};\n",
+    "o['x'] = 100; // in TS you would need an index signature to get away with this\n",
+    "o['y'] = 200;\n",
+    "console.log(o);\n",
+    "console.log(o.x);\n",
+    "console.log(o.y);\n",
+    "console.log()\n",
+    "\n",
+    "// the way you get the keys is different between the two\n",
+    "console.log('***Object.keys() vs. m.keys()***')\n",
+    "console.log(Object.keys(o));  // object treated as map (only the stuff you added, not built-in stuff)\n",
+    "// console.log(o.keys()); // doesn't exist\n",
+    "console.log(Object.keys(m));  // useless for real map\n",
+    "console.log(m.keys()); // the real map way (not for objects)\n",
+    "console.log();\n",
+    "\n",
+    "// Object.keys() respects inheritance but does not get Object stuff that's on everything\n",
+    "console.log('***Object.keys() generality***');\n",
+    "class MyClass {\n",
+    "    x = 5;\n",
+    "}\n",
+    "class MyClass2 extends MyClass {\n",
+    "    y = 10;\n",
+    "}\n",
+    "const n = new MyClass2();\n",
+    "console.log(Object.keys(n));\n",
+    "console.log();\n",
+    "\n",
+    "// Entries and values follow the same pattern as keys in terms of splitting between maps and objects\n",
+    "console.log('***Entries and Values***');\n",
+    "console.log(Object.entries(o));\n",
+    "console.log(m.entries());\n",
+    "console.log(Object.values(o));\n",
+    "console.log(m.values());\n",
+    "console.log();\n",
+    "\n",
+    "console.log('***Enumeration***');\n",
+    "/*for (const something of o) {\n",
+    "    console.log(something);\n",
+    "}*/ // ILLEGAL\n",
+    "for (const something of Object.entries(o)) {\n",
+    "    console.log(something); // now it's OK (key-value pairs)\n",
+    "}\n",
+    "for (const something of m) {\n",
+    "    console.log(something); // pair arrays\n",
+    "}\n",
+    "for (const [key, value] of m) {\n",
+    "    console.log(key, value); // same thing but we're destrcturing it\n",
+    "}\n",
+    "console.log();\n",
+    "\n",
+    "console.log('***in testing***');\n",
+    "console.log('x' in m); // true because on the object\n",
+    "console.log('y' in m); // false because on the map\n",
+    "console.log();\n",
+    "\n",
+    "// TypeScript\n",
+    "// const mymap: {[key: string]: string} = {};\n",
+    "// can add key-value pairs now without compiler complaining (if of right type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "e20d43d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***[] vs. .set()/.get()***\r\n",
+      "Map(0) { x: \u001b[33m100\u001b[39m }\r\n",
+      "[Map Iterator] {  }\r\n",
+      "Map(1) { \u001b[32m'y'\u001b[39m => \u001b[33m100\u001b[39m, x: \u001b[33m100\u001b[39m }\r\n",
+      "\u001b[90mundefined\u001b[39m\r\n",
+      "\r\n",
+      "***[] on object to treat like map***\r\n",
+      "{ x: \u001b[33m100\u001b[39m, y: \u001b[33m200\u001b[39m }\r\n",
+      "\u001b[33m100\u001b[39m\r\n",
+      "\u001b[33m200\u001b[39m\r\n",
+      "\r\n",
+      "***Object.keys() vs. m.keys()***\r\n",
+      "[ \u001b[32m'x'\u001b[39m, \u001b[32m'y'\u001b[39m ]\r\n",
+      "[ \u001b[32m'x'\u001b[39m ]\r\n",
+      "[Map Iterator] { \u001b[32m'y'\u001b[39m }\r\n",
+      "\r\n",
+      "***Object.keys() generality***\r\n",
+      "[ \u001b[32m'x'\u001b[39m, \u001b[32m'y'\u001b[39m ]\r\n",
+      "\r\n",
+      "***Entries and Values***\r\n",
+      "[ [ \u001b[32m'x'\u001b[39m, \u001b[33m100\u001b[39m ], [ \u001b[32m'y'\u001b[39m, \u001b[33m200\u001b[39m ] ]\r\n",
+      "[Map Entries] { [ \u001b[32m'y'\u001b[39m, \u001b[33m100\u001b[39m ] }\r\n",
+      "[ \u001b[33m100\u001b[39m, \u001b[33m200\u001b[39m ]\r\n",
+      "[Map Iterator] { \u001b[33m100\u001b[39m }\r\n",
+      "\r\n",
+      "***Enumeration***\r\n",
+      "[ \u001b[32m'x'\u001b[39m, \u001b[33m100\u001b[39m ]\r\n",
+      "[ \u001b[32m'y'\u001b[39m, \u001b[33m200\u001b[39m ]\r\n",
+      "[ \u001b[32m'y'\u001b[39m, \u001b[33m100\u001b[39m ]\r\n",
+      "y \u001b[33m100\u001b[39m\r\n",
+      "\r\n",
+      "***in testing***\r\n",
+      "\u001b[33mtrue\u001b[39m\r\n",
+      "\u001b[33mfalse\u001b[39m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!node ts-files/object-as-map.js"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebc2d441",
+   "id": "079ef136",
    "metadata": {},
    "outputs": [],
    "source": []
