--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1049,6 +1049,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "414d3755",
+   "metadata": {},
+   "source": [
+    "# Loading JSON Files\n",
+    "\n",
+    "There are two main ways to load JSON files (ignoring 3rd party libraries).\n",
+    "\n",
+    "If the file is available statically at __build time__, `import Data from './data.json';` will get the default import of a JSON file as an object in JS.\n",
+    "\n",
+    "If it is instead available dynamically at __run time__, eg. in the `build` folder of your app after building, use `fetch('./data.json')` and resolve it as if you were getting it from an API or a public URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d5bdbdae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TypeError: Failed to parse URL from ./data.json\n",
+      "    at Object.fetch (node:internal/deps/undici/undici:11522:11)\n",
+      "    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    // not working in jupyter for some reason, but works in real JS script in browser\n",
+    "    fetch('./data.json').then(response => {\n",
+    "        console.log('fetch done');\n",
+    "        if (response.ok) {\n",
+    "            response.json().then(o => {\n",
+    "                console.log(o);\n",
+    "            });\n",
+    "        }\n",
+    "        else {\n",
+    "            console.log(response);\n",
+    "        }\n",
+    "    });\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f98ca7a3",
    "metadata": {},
    "source": [
@@ -1206,7 +1263,7 @@
     "\n",
     "- __absolute path__: `/folder1/myscript.js`\n",
     "  - relative to __web app root__ (regardless of where index file or current file is)(configured by server)\n",
-    "- __relative path__: `folder1/myscript.js`\n",
+    "- __relative path__: `folder1/myscript.js` or `./folder1/myscript.js` (or parent `../folder1/myscript/js`)\n",
     "  - relative to current file"
    ]
   },
