Adding notes about .mjs files.

--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -1126,9 +1126,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15da876f",
+   "metadata": {},
+   "source": [
+    "# .mjs files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b7add7f",
+   "metadata": {},
+   "source": [
+    "`.mjs` files are just like `.js` files except they force the use of ES6 modules (`import`) rather than NodeJS modules (`require`).  For normal `.js` files, it depends on the project settings used in compiling/packing.\n",
+    "\n",
+    "Remember that NodeJS itself uses ES6 modules now."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c39b9872",
+   "id": "e19ece07",
    "metadata": {},
    "outputs": [],
    "source": []
